# UCNtau_Trap_Sim_2026

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
config.yaml/: example.yaml
data/: neutrons_init_test.out
docs/: architecture.md  scintific_contract.md
include/ucntrap/: config.hpp  constants.hpp  random.hpp  runner.hpp  state.hpp  trace.hpp
include/ucntrap/experiment/: energy_tracker.hpp  production_tracker.hpp  tracker.hpp
include/ucntrap/io/: result_writer.hpp  trace_loader.hpp
include/ucntrap/numerics/: integrator.hpp  lut.hpp
include/ucntrap/physics/: dagger.hpp  field_model.hpp  planar_halbach_field.hpp  surface_model.hpp  trap_halbach_field.hpp
include/ucntrap/source/: initial_condition_source.hpp  pentrack_reader.hpp  random_source.hpp
python/: analysis.py  dist_comparison.py  python_usage.ipynb  sim_script.py  trajectory_comparison.py
scripts/: run_analysis.sh  run_sim.sh  submit_all.sh
src/: python_wrapper.cpp
src/cli/: main.cpp
src/core/: config.cpp  runner.cpp
src/experiment/: energy_tracker.cpp  production_tracker.cpp
src/io/: result_writer.cpp  trace_loader.cpp
src/numeric/: integrator.cpp
src/physics/: dagger.cpp  field_model.cpp  planar_halbach_field.cpp  surface_model.cpp  trap_halbach_field.cpp
src/source/: pentrack_source.cpp  random_source.cpp
tests/: compare_dist.cpp  liouville_test.cpp  physics_overlap_test.cpp  traj_overlap_test.cpp
tests/files/: legacy_dist.txt  modern_dist_rank0.csv  planar_comparison.csv  trap_comparison.csv
